some more responsive stuff, menu jumps to horizontal correctly now, transitions working

--- a/src/css/entryPage.css
+++ b/src/css/entryPage.css
@@ -62,19 +62,15 @@ article{
         top:0;
         left: 0;
         height: 15vh;
-        width: 100vw;
-        font-size: 1.3vh;
         min-width: 100vw;
+        font-size: 1.3vh;
         min-height: fit-content;
         flex-direction: row;
         border-bottom: 2px solid black;
         border-left: 0px solid beige;
         box-shadow: 2px 2px 2px 1px rgba(19, 19, 19, 0.2);
     }
-    .sidebar *{
-        flex-direction: row;
 
-    }
     .not-sidebar{
         position: relative;
         top: 15vh;
@@ -86,13 +82,14 @@ article{
     .logo{
         height: 100%;
         margin: 0;
+        border-bottom: none;
+        padding: 2%;
     }
     .logo img{
         height: 100%;
         width: auto;
     }
     .buttons{
-        flex-direction: row;
     }
     .buttons li {
         border-right: none;
