--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -37,11 +37,11 @@
 }
 
 .buttons{
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     margin-right: 5%;
-    width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 .buttons li{
     background-color: rgb(115, 183, 115);
@@ -53,6 +53,11 @@
     text-align: center;
     height: fit-content;
     display: block;
+
+    flex-shrink:2;
+
+    transition: margin 1s;
+    transition: padding 1s;
     transition: border-right 1s;
     transition: font-weigh 1s;
 
